--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,7 @@
     <main class="container">
     <section id="question"><!---created id to reference it in the JS and CSS but mainly the JS to showcase js skills-->
     <ul>
+        <!---list elements used to represent the question answers.  since they act in the same manner applying a class with the same name will allow to target the question in the JS code.  -->
         <li class="multiplechoice"></li>
         <li class="multiplechoice"></li>
         <li class="multiplechoice"></li>
@@ -19,6 +20,7 @@
     </section>
 </main>
 
-<script src="./assets/quiz.js"></script>
+
 </body>
+<script src="./assets/quiz.js"></script>
 </html>
