--- a/quiz.html
+++ b/quiz.html
@@ -13,9 +13,9 @@
     <section id="question"></section><!---created id to reference it in the JS and CSS but mainly the JS to showcase js skills-->
     <ul>
         <!---list elements used to represent the question answers.  since they act in the same manner applying a class with the same name will allow to target the question in the JS code.  -->
-        <li class="multiplechoice"></li>
-        <li class="multiplechoice"></li>
-        <li class="multiplechoice"></li>
+        <button id="choice1"></button>
+        <button id="choice2"></button>
+        <button id="choice3"></button>
     </ul>
     
 </main>
